# agrirl-env

./: .gitignore  README.md  __init__.py  client.py  digital_twin.py  grader.py  inference.py  knowledge_base.json  knowledge_base.py  mock_responses.py  models.py  openenv.yaml  policy.py  post_mortem.py  pyproject.toml  strategist.py  train.py  visualizer.py
server/: Dockerfile  __init__.py  agrirl_env_environment.py  app.py  inference.py  models.py  requirements.txt  tasks.py
